sam-internal/k8s-out/par/par-sam/istio-sidecar-istio-core-sidecar-phase3.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  annotations:
    manifestctl.sam.data.sfdc.net/swagger: disable
  name: istio-core-sidecar
  namespace: app
spec:
  egress:
  - bind: 127.1.2.3
    captureMode: NONE
    hosts:
    - mesh-control-plane/*
    - z9s-default/*
    - app/*
    - funnel/*
    - service-mesh/*
    port:
      name: grpc-egress
      number: 7443
      protocol: GRPC
  - bind: 127.1.2.3
    captureMode: NONE
    hosts:
    - mesh-control-plane/*
    - z9s-default/*
    - app/*
    - funnel/*
    - service-mesh/*
    port:
      name: http-egress
      number: 7442
      protocol: HTTP
  ingress:
  - captureMode: NONE
    defaultEndpoint: 127.0.0.1:7020
    port:
      name: grpc-core
      number: 7443
      protocol: GRPC
